# Urban-MCI-Command-Center

./: .gitignore  COMPLETE_DOCUMENTATION.md  Dockerfile  README.md  app.py  fix.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py  urban_mci_env.py
dashboard/: README.md  example.html  git_pull.code-workspace  index.html  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.css  App.js  index.css
dashboard/src/components/: ControlPanel.css  ControlPanel.js  MapView.css  MapView.js  MetricsPanel.css  MetricsPanel.js
dashboard/src/services/: api.js
server/: app.py
