$content = @"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "urban-mci-command-center"
version = "1.0.0"
description = "Urban Mass Casualty Incident Command Environment"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gunicorn>=21.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
"@
[System.IO.File]::WriteAllText("$pwd\pyproject.toml", $content, [System.Text.UTF8Encoding]::new($false))
