[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "urban-mci-command-center"
version = "1.0.0"
description = "Urban Mass Casualty Incident Command Environment"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gunicorn>=21.2.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[tool.setuptools.packages.find]
where = ["."]
